[gd_scene load_steps=16 format=3 uid="uid://cq3ir5u82bhyk"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_0aune"]
[ext_resource type="Texture2D" uid="uid://dk7lp3sks48a" path="res://scenes/game_object/player/player.png" id="1_gn467"]
[ext_resource type="PackedScene" uid="uid://dshayj7f3jqbb" path="res://scenes/component/health_component.tscn" id="2_5wval"]
[ext_resource type="PackedScene" uid="uid://bs5m1krsub2tm" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_x3yp0"]
[ext_resource type="PackedScene" uid="uid://cyj7mdiffvk1r" path="res://scenes/component/hit_flash_component.tscn" id="3_sn8ai"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component.gdshader" id="4_s1i5b"]

[sub_resource type="Animation" id="Animation_dv3m0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_yff7g"]
resource_name = "walk"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 8.2821, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.134788, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.102286, 0.3, 0.4, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 0.143588, 1, 0.225313, 1, 0.535887, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.16, 1), Vector2(1.16274, 1), Vector2(1.4, 1), Vector2(1, 1.5), Vector2(1, 1.2), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ko5t"]
_data = {
"RESET": SubResource("Animation_dv3m0"),
"walk": SubResource("Animation_yff7g")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lr3gj"]
resource_local_to_scene = true
shader = ExtResource("4_s1i5b")
shader_parameter/lerp_percent = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8qmav"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqv5a"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_ajqw1"]
radius = 20.025

[sub_resource type="CircleShape2D" id="CircleShape2D_nloqt"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pyhhq"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_0aune")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1ko5t")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_5wval")]

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("3_sn8ai")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_lr3gj")

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_x3yp0")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -23.0
offset_right = 16.0
offset_bottom = -17.0
pivot_offset = Vector2(16, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_8qmav")
theme_override_styles/fill = SubResource("StyleBoxFlat_dqv5a")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_ajqw1")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_gn467")
offset = Vector2(0, -8)

[node name="CollisionArea2D" type="Area2D" parent="."]
visible = false
position = Vector2(0, -2)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_nloqt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_pyhhq")

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="timeout" from="DamageIntervalTimer" to="." method="_on_damage_interval_timer_timeout"]
[connection signal="body_entered" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_entered"]
[connection signal="body_exited" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_exited"]
